--- a/2.HTML-CSS/genito/index.html
+++ b/2.HTML-CSS/genito/index.html
@@ -1,15 +1,34 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hola Mundo</title>
+    <title>Login Page</title>
     <link rel="stylesheet" href="style.css">
-    
 </head>
 <body>
     <div class="container">
-        <h1>Hola Mundo</h1>
+        <div class="login-section">
+            <h2>Login</h2>
+            <form>
+                <div class="input-group">
+                    <label for="username">Username</label>
+                    <input type="text" id="username" name="username" required>
+                </div>
+                <div class="input-group">
+                    <label for="password">Password</label>
+                    <input type="password" id="password" name="password" required>
+                </div>
+                <button type="submit">Login</button>
+                <button type="button" class="register-btn">Register</button>
+            </form>
+        </div>
+        <div class="info-section">
+            <div class="overlay">
+                <h2>Welcome to Our Website</h2>
+                <p>Here you can find various resources and information about our services. Please login to access your account and personalized features.</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
