feat:subir imagen para visualizar

--- a/2.HTML-CSS/Manuel_Moreno/index.html
+++ b/2.HTML-CSS/Manuel_Moreno/index.html
@@ -15,7 +15,7 @@
 <body>
 
   <div class="CONTAINER">
-    <img src="../Manuel_Moreno/Imagenes/login.gif" alt="Login" class="background-image">
+    <img src="login.gif" alt="Login" class="background-image">
     <h1><span>BIENVENIDO</span> <span>!</span></h1>
     <form action="Main.html">
       <div class="email">
