feat:mejorar login con observaciones

--- a/2.HTML-CSS/Manuel_Moreno/index.html
+++ b/2.HTML-CSS/Manuel_Moreno/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-  <div class="CONTAINER">
+  <div class="container">
     <img src="login.gif" alt="Login" class="background-image">
     <h1><span>BIENVENIDO</span> <span>!</span></h1>
     <form action="Main.html">
@@ -39,7 +39,7 @@
       <button type="submit">Login</button>
     </form>
     <div class="ayudas">
-      <div id="Signup">Signup</div>
+      <div id="signup">Signup</div>
       <div>ForgotPassword?</div>
     </div>
 
