add: Cambio en enlaces de redes sociales

--- a/2.HTML-CSS/Kleber Briones/index.html
+++ b/2.HTML-CSS/Kleber Briones/index.html
@@ -18,13 +18,13 @@
                 <h1>Computer Shop</h1>
                 <p>Inicia Sesión</p>
                 <div id="social-network">
-                    <a href="www.facebook.com">
+                    <a href="https://www.facebook.com">
                         <i class="fa-brands fa-facebook-f"></i>
                     </a>
-                    <a href="www.instagram.com">
+                    <a href="https://www.instagram.com">
                         <i class="fa-brands fa-instagram"></i>
                     </a>
-                    <a href="www.twitter.com">
+                    <a href="https://www.twitter.com">
                         <i class="fa-brands fa-x-twitter"></i>
                     </a>
                 </div>
