--- a/2.HTML-CSS/Estiven_Rodriguez/index.html
+++ b/2.HTML-CSS/Estiven_Rodriguez/index.html
@@ -4,28 +4,77 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Login</title>
-        <link rel="stylesheet" href="estilos/style.css">        
+        <link rel="stylesheet" href="estilos/style.css">  
+        <!-- iconos -->
+        <link  rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+            integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+            />      
     </head>
     <body>
         <div id="container">
             <div id="form-zone">
-                <h1>Login</h1>
-                <img src="" alt="facebook" />
-                <img src="" alt="Twiter" />
-                <img src="" alt="Instagram" />
-                <hr />
+                <p>Por Favor ingrese los datos de su cuenta</p>
+                <br />
+                <br />
+                <br />
                 <form action="#">
-                    <input type="mail" placeholder="email">
+                    <label>Email</label> 
+                    <input type="mail" placeholder="email">                    
+                    <label>Contraseña</label> 
                     <input type="password" placeholder="contraseña">
+                    <div class="link-wrapper">
+                        <a href="">Olvido la Contraseña</a>
+                    </div>
                     <input type="submit" placeholder="ingresar">
                 </form>
-                <hr />
-                <p>Este es un ejercicio de HTML y CSS para el día 22 de junio de 2021.</p>
-                <p>El objetivo es crear un documento HTML con un encabezado de tres letras, un párrafo de texto, y un link que dirija a una página web externa.</p>
-                <a href="https://www.google.com/">Ir a Google....</a>
+                <div class="social-net">
+                    <a href="http://">  
+                        <i class="fa-brands fa-google"></i>
+                    </a>
+                    <a href="http://"> 
+                        <i class="fa-brands fa-github"></i>
+                    </a>
+                    <a href="http://">  
+                        <i class="fa-brands fa-facebook-f"></i>
+                    </a>
+                </div>    
+                <div class="link-wrapper">
+                    <a href="">Crear una cuenta</a>
+                </div>
             </div> 
             <div id="sign-up">
-                sign-up
+                <div id="sign-up2">
+                    <div class="texto_sign-up">
+                        <h1 ><b>Lorem ipsum dolor sit amet</b></h1>
+                        <p>
+                            <br />
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+                            <br /><br /> 
+                            <b>incididunt ut labore </b>
+                            <br /> 
+                            et dolore magna aliqua. Ut enim ad minim veniam
+                        </p>
+                        
+                    </div>
+                    <div id="contenedorFlechas">
+                        <div class="divFlechas">
+                            <p><--</p>
+                        </div>
+                        <div class="divFlechas">
+                            <p>--></p>
+                        </div>
+                    </div>
+                    <div id="sign-up3">
+                        <div>
+                            <b>Lorem ipsum dolor sit amet, consectetur adipiscing elit</b>
+                            <br /><br />
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat
+                        </div>
+                    </div>
+                </div>                
             </div>
         </div>
     </body>
