--- a/2.HTML-CSS/Kleber Briones/index.html
+++ b/2.HTML-CSS/Kleber Briones/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="./estilos/reset.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous"/>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -32,7 +33,7 @@
                     <hr>
                         <input type="mail" placeholder="Email"/> <br> <br>
                         <input type="password" placeholder="Password"/> <br> <br>
-                        <input type="submit" value="Ingresar"/>
+                        <input class="btn btn-primary" type="submit" value="Ingresar"/>
                 </form>
             </div>  
                 <div id="bienvenida">    
@@ -43,6 +44,6 @@
          
 
         </div>
-            
-        </body>
-        </html>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    </body>
+</html>
